Fix contrast on titlebar buttons

--- a/Helium/gtk-4.0/widgets/_header-bar.scss
+++ b/Helium/gtk-4.0/widgets/_header-bar.scss
@@ -110,13 +110,13 @@ windowcontrols {
         box-shadow: none;
 
         > image {
-            background: $button_color;
-            color: $view_fg_color;
+            background: $surface_container_high_bg_color;
+            color: $surface_fg_color;
             border-radius: $button_radius;
             padding: 2px;
             transition: $button_transition;
             @if $contrast == "high" {
-                box-shadow: inset 0 0 0 1px $border_color;
+                box-shadow: inset 0 0 0 1px $outline;
             }
         }
 
